name:                ghc-justdoit
version:             0.1.0.2
synopsis:            A magic typeclass that just does it
description:
    This plugin allows you to write
    .
    @
    &#123;&#45;\# OPTIONS_GHC -fplugin GHC.JustDoIt.Plugin \#&#45;&#125;
    module Test where
    .
    import GHC.JustDoIt
    .
    foo :: ((a -> r) -> r) -> (a -> ((b -> r) -> r)) -> ((b -> r) -> r)
    foo = (…)
    @
    .
    without having to write the actual implementation of `foo`.
    .
    See <https://github.com/nomeata/ghc-justdoit/blob/master/examples/Demo.hs examples/Demo.hs>
    for a few examples of what this plugin can do for you.

homepage:            https://github.com/nomeata/ghc-justdoit
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2018 Joachim Breitner
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC ==9.0.*

library
  exposed-modules:     GHC.LJT
  exposed-modules:     GHC.JustDoIt
  exposed-modules:     GHC.JustDoIt.Plugin
  exposed-modules:     GHC.JustDoIt.Solver
  build-depends:       base >=4.15 && <4.16
  build-depends:       hashable
  build-depends:       ghc >=9.0
  default-language:    Haskell2010

test-suite demo
  type:       exitcode-stdio-1.0
  main-is:    Demo.hs
  hs-source-dirs: examples/
  build-depends:  base
  build-depends:  ghc-justdoit
  build-depends:  inspection-testing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/nomeata/ghc-justdoit.git
